--- a/app/src/main/res/layout/activity_contest_details.xml
+++ b/app/src/main/res/layout/activity_contest_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/white"
     tools:context=".contest.create.CheckContest">
 
     <RelativeLayout
@@ -49,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hosted by: "
-                    android:textColor="@color/black" />
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/hostedbyTv"
@@ -58,14 +59,37 @@
                     android:text="Naman"
                     android:textColor="@color/black"
                     android:textSize="17sp"
-                    android:textStyle="bold" />
+                     />
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/createdBy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/host"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Creator Username: "
+                    android:textColor="@color/grey" />
+
+                <TextView
+                    android:id="@+id/usernameCreator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Naman"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    />
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/hostgp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/host"
+                android:layout_below="@id/createdBy"
                 android:layout_margin="5dp"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -102,7 +126,7 @@
                     android:text="1st prize:"
                     android:textColor="@color/black"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                     />
 
                 <TextView
                     android:id="@+id/p1Tv"
@@ -122,7 +146,7 @@
                     android:text="2nd prize:"
                     android:textColor="@color/black"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                   />
 
                 <TextView
                     android:id="@+id/p2Tv"
@@ -144,7 +168,7 @@
                     android:text="3rd prize:"
                     android:textColor="@color/black"
                     android:textSize="15sp"
-                    android:textStyle="bold" />
+                   />
 
                 <TextView
                     android:id="@+id/p3Tv"
@@ -178,18 +202,21 @@
                     android:layout_margin="10dp"
 
                     android:layout_marginBottom="15dp"
-                    android:background="#93E196"
+                    android:background="@drawable/rectangular_border"
+                    android:textColor="@color/scheme8"
                     android:text="Prticipate"
                     android:textAlignment="gravity" />
 
                 <Button
                     android:id="@+id/voteBtn"
                     android:layout_width="wrap_content"
+
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_margin="10dp"
                     android:layout_marginBottom="15dp"
-                    android:background="#F3E35B"
+                    android:textColor="@color/scheme8"
+                    android:background="@drawable/rectangular_border"
                     android:text="Vote"
                     android:textAlignment="gravity" />
             </LinearLayout>
@@ -213,7 +240,7 @@
                 android:layout_below="@+id/prizell"
                 android:text="Descritpion:"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -223,7 +250,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/description"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/white_border"
+                android:background="@drawable/rectangular_border"
                 android:padding="5dp"
                 android:text="@string/descrip" />
 
@@ -234,7 +261,7 @@
                 android:layout_below="@+id/descripTv"
                 android:text="Rules: "
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -243,7 +270,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/rule"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/white_border"
+                android:background="@drawable/rectangular_border"
                 android:padding="5dp"
                 android:text="@string/rule" />
 
@@ -254,7 +281,7 @@
                 android:layout_below="@+id/ruleTv"
                 android:text="Details: "
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textStyle="bold" />
 
 
@@ -296,7 +323,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Entry Fee"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -305,7 +332,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="Total Prize"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -323,7 +350,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="₹10"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/totalprizeTv"
@@ -333,7 +360,7 @@
                             android:gravity="center_horizontal"
                             android:text="₹100"
 
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                     </TableRow>
 
@@ -348,7 +375,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Max number of Participant"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -357,7 +384,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="Voting Type"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -376,7 +403,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="15"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/voteTypeTv"
@@ -387,7 +414,7 @@
 
                             android:text="public"
 
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                     </TableRow>
 
@@ -402,7 +429,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Registration Begin"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -411,7 +438,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="Registration End"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -429,7 +456,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="3/3/2020"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/regE"
@@ -438,7 +465,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="9/3/2020"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                     </TableRow>
 
@@ -453,7 +480,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Domain"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -462,7 +489,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="Open for"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -480,7 +507,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Film Maker"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/openForTv"
@@ -489,7 +516,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="All"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                     </TableRow>
 
@@ -504,7 +531,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Public Voting Begin"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -513,7 +540,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="Public Voting End"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -532,7 +559,7 @@
 
                             android:gravity="center_horizontal"
                             android:text="5/3/2020"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/votE"
@@ -542,7 +569,7 @@
 
                             android:gravity="center_horizontal"
                             android:text="7/3/2020"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
                     </TableRow>
 
                     <TableRow
@@ -556,7 +583,7 @@
                             android:layout_weight="1"
                             android:gravity="center_horizontal"
                             android:text="Winner Announcement Date"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -565,7 +592,7 @@
                             android:gravity="center_horizontal"
 
                             android:text="File Type Allowed"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/grey" />
 
 
                     </TableRow>
@@ -584,7 +611,7 @@
 
                             android:gravity="center_horizontal"
                             android:text="5/3/2020"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/fileTv"
@@ -594,7 +621,7 @@
 
                             android:gravity="center_horizontal"
                             android:text="Picture"
-                            android:textColor="@color/grey" />
+                            android:textColor="@color/black" />
 
                     </TableRow>
 
@@ -700,8 +727,7 @@
                             android:gravity="center_horizontal"
                             android:textAlignment="center"
                             android:textColor="#03A9F4"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
+                            android:textSize="15sp"
                             android:visibility="gone" />
 
                         <TextView
@@ -714,8 +740,7 @@
                             android:gravity="center_horizontal"
                             android:textAlignment="center"
                             android:textColor="#03A9F4"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
+                            android:textSize="15sp"
                             android:visibility="gone" />
 
                     </TableRow>
@@ -754,8 +779,7 @@
                             android:text="Naman"
                             android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
+                            android:textSize="15sp"
                             android:visibility="gone" />
 
 
@@ -776,8 +800,8 @@
                             android:gravity="center_horizontal"
                             android:textAlignment="center"
                             android:textColor="#03A9F4"
-                            android:textSize="18sp"
-                            android:textStyle="bold"
+                            android:textSize="15sp"
+
                             android:visibility="gone" />
 
 
