--- a/app/src/main/res/layout/activity_jury_voting_media.xml
+++ b/app/src/main/res/layout/activity_jury_voting_media.xml
@@ -2,11 +2,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/gradient"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/relLayout1">
+        <include layout="@layout/snippet_top_marks_bar"/>
 
+    </RelativeLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+android:layout_below="@+id/relLayout1"
+        android:id="@+id/quote"
+        android:gravity="center_horizontal"
+        android:text="Marks must be given between 1-10 range.\nGreat power comes with great responsbility"
+        android:textColor="@color/grey" />
     <ScrollView
         android:layout_width="wrap_content"
+        android:layout_below="@+id/quote"
         android:layout_height="wrap_content">
 
         <RelativeLayout
