--- a/app/src/main/res/layout/contest_participant_item.xml
+++ b/app/src/main/res/layout/contest_participant_item.xml
@@ -1,51 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:background="@drawable/white_border">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp"
-        android:layout_toStartOf="@+id/post_image"
-        android:layout_toLeftOf="@+id/post_image" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="8dp"
+    app:cardCornerRadius="3dp"
+    android:elevation="10dp"
+    android:background="@color/white">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="1"
             android:orientation="horizontal">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="35dp"
                 android:layout_height="35dp"
+                android:layout_weight="0.1"
                 android:id="@+id/profilePartCv"/>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/username"
-                android:text="HIs Username"
+                android:text="HIs username"
+                android:layout_weight="0.6"
                 android:layout_marginLeft="5dp"
                 android:layout_gravity="center_vertical"
                 android:textStyle="bold"
                 android:textColor="@color/black"/>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"
-                android:id="@+id/displayname"
-                android:layout_gravity="center_vertical"
 
-                android:text=" Naman"
-                android:maxLines="5"/>
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/timeStamp"
                 android:text="Time"
+                android:layout_weight="0.3"
                 android:textSize="7sp"
                 android:gravity="end"
                 android:layout_marginRight="10dp"
@@ -54,7 +45,6 @@
         </LinearLayout>
 
 
-    </LinearLayout>
 
 
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
