--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -4,6 +4,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="#00000000"
         android:layout_alignParentBottom="true"
         android:id="@+id/bottom">
 
@@ -11,7 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/BottomNavViewBar"
-            android:background="@drawable/white_border"
+            android:background="@drawable/top_round_button"
             app:menu="@menu/bottom_navigation_menu" >
 
 
