--- a/app/src/main/res/layout/layout_bottom_sheet.xml
+++ b/app/src/main/res/layout/layout_bottom_sheet.xml
@@ -14,12 +14,11 @@
         android:text="Participant Detail"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:gravity="center_horizontal"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="@color/grey"
+        android:background="@color/scheme8"
         android:layout_marginBottom="10dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -39,9 +38,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="uername"
+        android:textAlignment="center"
+        android:gravity="center"
+
+        android:text="username"
         android:id="@+id/usernameBs"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="center_horizontal"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,25 +51,28 @@
         android:padding="10dp"
         android:id="@+id/collegeLinear"
 
+        android:weightSum="1"
         android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="College/School: "
-        android:textStyle="bold"
+        android:text="College/School:"
+        android:layout_weight=".28"
         android:textColor="@color/black"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="KIET"
+            android:text="Kiet"
             android:id="@+id/collegeBs"
+            android:layout_weight="0.6"
             android:textColor="@color/black"/>
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="see ID card"
+            android:layout_weight="0.2"
             android:gravity="right"
             android:id="@+id/idBs"
             android:textColor="#03A9F4"/>
@@ -83,11 +88,15 @@
         android:layout_marginBottom="20dp"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="10dp"
         android:text="Remove Participant"
-        android:textSize="21sp"
+        android:background="@drawable/rectangular_border"
+        android:textSize="18sp"
         android:gravity="center_horizontal"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:textColor="#F44336"
         android:id="@+id/remove"/>
