--- a/app/src/main/res/layout/snippet_top_joinform_bar.xml
+++ b/app/src/main/res/layout/snippet_top_joinform_bar.xml
@@ -22,17 +22,17 @@
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/backarrow"
-                    android:src="@drawable/ic_backarrow"
+                    android:src="@drawable/ic_back_black_arrow"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="20dp" />
 
 
                 <TextView
-                    android:layout_toRightOf="@+id/backarrow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:text="Join Contest"
+                    android:layout_centerHorizontal="true"
                     android:textColor="#000000"
                     android:layout_marginLeft="5dp"/>
 
