--- a/app/src/main/res/layout/snippet_top_marks_bar.xml
+++ b/app/src/main/res/layout/snippet_top_marks_bar.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="Vote"
+                android:text="Judge"
                 android:textColor="#000000"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="15dp"
