--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -84,46 +83,36 @@
 
                     <TextView
                         android:id="@+id/spinnerDo"
-                        android:text="All"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:entries="@array/domain2" />
+                        android:entries="@array/domain2"
+                        android:text="All"
+                        android:textColor="@color/black"
+                        android:textSize="20sp" />
 
                 </LinearLayout>
 
-                <ProgressBar
-                    android:id="@+id/progress_circular"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginBottom="15dp"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:visibility="gone"
-                    android:layout_below="@+id/domain"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginLeft="0dp"
-                    android:indeterminateTint="@android:color/holo_orange_dark"
-                    tools:ignore="NotSibling" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/exploreRv"
+                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                    android:id="@+id/swiperefresh"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="visible"
-                    android:layout_below="@+id/domain"
-                    android:layout_centerHorizontal="true"
-                  android:nestedScrollingEnabled="false"
+                    android:layout_below="@id/domain"
+                    android:background="@drawable/circular_corner_rectangle"
+                    android:backgroundTint="@color/white">
 
-                android:layout_marginTop="10dp"
-                    android:layout_marginBottom="50dp"
-                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                    app:spanCount="3" />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/exploreRv"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="50dp"
+                        android:nestedScrollingEnabled="false"
+                        android:visibility="visible"
+                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                        app:spanCount="3" />
+                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
             </RelativeLayout>
         </RelativeLayout>
     </ScrollView>
