--- a/app/src/main/res/layout/activity_explore.xml
+++ b/app/src/main/res/layout/activity_explore.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/white">
 
 
@@ -15,45 +15,63 @@
 
     </RelativeLayout>
 
-
-    <ScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/relLayout1">
+        android:layout_below="@+id/relLayout1"
+        android:nestedScrollingEnabled="false">
+
+        <RelativeLayout
+            android:id="@+id/contellation"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false">
+
+            <ListView
+                android:id="@+id/listview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <RelativeLayout
+                android:id="@+id/collapse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true">
+
+                <include layout="@layout/layout_constellation" />
+
+            </RelativeLayout>
+        </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/contellation"
+            android:nestedScrollingEnabled="false">
 
             <RelativeLayout
-                android:id="@+id/contellation"
+                android:id="@+id/topBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <ListView
-                    android:id="@+id/listview"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="340dp"
-                    android:layout_below="@+id/listview">
-
-                    <include layout="@layout/layout_constellation" />
-                </RelativeLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/contellation">
+                <View
+                    android:id="@+id/scrollDownActive"
+                    android:layout_width="55dp"
+                    android:layout_height="5dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/circular_corner_rectangle"
+                    android:backgroundTint="@color/black" />
 
                 <TextView
                     android:id="@+id/explore"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
+                    android:layout_centerHorizontal="true"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/scrollDownActive"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
                     android:gravity="center_horizontal"
@@ -65,11 +83,12 @@
 
                 <LinearLayout
                     android:id="@+id/domain"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/explore"
                     android:layout_centerHorizontal="true"
                     android:gravity="center_horizontal"
+                    android:nestedScrollingEnabled="false"
                     android:orientation="horizontal">
 
                     <TextView
@@ -92,30 +111,30 @@
                         android:textSize="20sp" />
 
                 </LinearLayout>
+            </RelativeLayout>
 
-                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                    android:id="@+id/swiperefresh"
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swiperefresh"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/topBox"
+                android:background="@drawable/circular_corner_rectangle"
+                android:backgroundTint="@color/white">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/exploreRv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/domain"
-                    android:background="@drawable/circular_corner_rectangle"
-                    android:backgroundTint="@color/white">
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/exploreRv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="50dp"
-                        android:nestedScrollingEnabled="false"
-                        android:visibility="visible"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        app:spanCount="3" />
-                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-            </RelativeLayout>
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="50dp"
+                    android:nestedScrollingEnabled="false"
+                    android:visibility="visible"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="3" />
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
         </RelativeLayout>
-    </ScrollView>
+    </RelativeLayout>
 
     <include layout="@layout/layout_bottom_navigation_view" />
 
