--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -7,8 +7,8 @@
         android:background="#00000000"
         android:layout_alignParentBottom="true"
         android:id="@+id/bottom">
-
         <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
+            android:backgroundTint="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/BottomNavViewBar"
